# RibbonUiFrame

./: .gitignore  CMakeLists.txt  LICENSE  RibbonFrameDemo.pro  RibbonFrameDemo.sln  copy-resource-files.bat  copy-resource-files.sh  copy-resource-files_macos.sh  readme.md  复制common文件.bat  复制common文件.sh
MFCModule/: MFCModule.cpp  MFCModule.h  MFCModule.rc  MFCModule.vcxproj  MFCModule.vcxproj.filters  MFCModuleDlg.cpp  MFCModuleDlg.h  MFCModuleInterface.cpp  MFCModuleInterface.h  MFCModuleService.cpp  MFCModuleService.h  framework.h  resource.h
MFCModule/interface/: IMFCModuleService.h
MFCModule/res/: MFCModule.rc2
MainApp/: CMakeLists.txt  MainApp.pro  MainApp.vcxproj  MainApp.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
MainApp/res/: MainFrame.xml  logo.icns
MainApp/toolkits/: Config.cpp  Config.h
OfficeStyleApp/: OfficeStyleApp.pro  OfficeStyleApp.qrc  OfficeStyleApp.vcxproj  OfficeStyleApp.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  resId.h
OfficeStyleApp/dialog/: ParagraphDialog.cpp  ParagraphDialog.h  ParagraphDialog.ui
OfficeStyleApp/res/: MainFrame.xml
RibbonFrame/: CMakeLists.txt  RibbonFrame.pro  RibbonFrame.rc  RibbonFrame.vcxproj  RibbonFrame.vcxproj.filters  RibbonFrameHelper.cpp  RibbonFrameHelper.h  modulemanagerdlg.cpp  modulemanagerdlg.h  modulemanagerdlg.ui  resource.h  ribbonframe.qrc  ribbonframewindow.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
RibbonFrame/ServiceManager/: ServiceManager.cpp  ServiceManager.h
RibbonFrame/qxframeless/: framelesshelper.cpp  qxframeless-lib.pri
RibbonFrame/res/: styleForWindows.css
RibbonFrame/toolkits/: WinVersionHelper.cpp  WinVersionHelper.h  moduletools.cpp  moduletools.h
RibbonFrame/widgets/: navigatewidget.cpp  navigatewidget.h  titlebarwidget.cpp  titlebarwidget.h
RibbonUiTools/: RibbonUiTools.pro  RibbonUiTools.vcxproj  RibbonUiTools.vcxproj.filters  mainwindow.cpp  mainwindow.h  ribbunuitools.qrc
RibbonUiTools/GenerateResourceIdDefines/: GenerateResourceIdDefines.pri  widget.cpp  widget.h  widget.ui
RibbonUiTools/res/: MainFrame.xml
StylePlugin/: CMakeLists.txt  StringHelper.cpp  StringHelper.h  StyleEventFilter.cpp  StyleEventFilter.h  StylePlugin.pro  StylePlugin.rc  StylePlugin.vcxproj  StylePlugin.vcxproj.filters  StylePlugin_global.h  qss.qrc  resource.h  stylemanager.cpp  stylemanager.h  styleplugin.cpp  styleplugin.h  themecolor.cpp  themecolor.h
StylePlugin/qss/: bf.css  black.css  blue.css  darkblack.css  darkblue.css  darkgray.css  default_style.qss  flatblack.css  flatwhite.css  flatwhite2.css  gray.css  lightblack.css  lightblue.css  lightgray.css  offece2010black.css  offece2010blue.css  offece2010silvery.css  offece2013darkgray.css  offece2013lightgray.css  offece2013white.css  offece2016.css  offece2016dark.css  psblack.css  silvery.css  test.css  windows10light.css  winui3light.css
TestModule/: CMakeLists.txt  Common.cpp  Common.h  TestModule.pro  TestModule.vcxproj  TestModule.vcxproj.filters  mainwidget.cpp  mainwidget.h  mainwidget.ui  resource.qrc  testmodule.cpp  testmodule.h  testmodule_global.h
TestModule/widgets/: navigatewidget.cpp  navigatewidget.h
common/: MainFrame.xml
include/: mainframe_global.h  mainframeinterface.h  moduleinterface.h  ribbonframewindow.h  ribbonuipredefine.h  serviceinterface.h  styleinterface.h
